devel/cssed: enabled plugins support
git-svn-id: https://cygwin-ports.svn.sourceforge.net/svnroot/cygwin-ports/ports/trunk@4391 e127d73d-b18e-4ae1-a744-a22e6a3ccd30

--- a/README
+++ b/README
@@ -5,51 +5,66 @@ It features auto completion, CSS syntax validation, and other utili-
 ties to help web developer to create and maintain CSS style sheets.
 
 Runtime requirements:
-  cygwin-1.5.19-4
-  atk-runtime-1.9.1-1
-  glib2-runtime-2.6.6-2
-  gtk2-x11-runtime-2.6.10-1
-  libxml2-2.6.22-1
+  cygwin-1.5.25-15
+  atk-1.22.0-1
+  gdk-pixbuf2-2.12.11-1
+  glib2-2.16.5-1
+  gtk2-x11-2.12.11-1
+  libintl8-0.15-1
+  libxml2-2.6.32-1
+  pango-1.20.5-1
 
 Build requirements:
 (besides corresponding -devel packages)
-  cygwin-1.5.19-4
-  autoconf2.5-2.59-3
-  automake1.9-1.9.6-1
-  binutils-20050610-1
-  gawk-3.1.5-1
-  gcc-core-3.4.4-1
-  make-3.80-1
-  pkgconfig-0.17.2-2
-  sed-4.1.4-1
+  autoconf2.5-2.61-1
+  automake1.9-1.9.6-2
+  binutils-20080624-2
+  cygport-0.4.0-1
+  gawk-3.1.6-1
+  gcc-core-3.4.4-3
+  gcc-g++-3.4.4-3
+  gnome-common-2.20.0-2
+  libtool-2.2.2-2
+  make-3.81-1
+  pkg-config-0.23a-2
+  sed-4.1.5-2
 
 Canonical homepage:
   http://cssed.sourceforge.net/
 
 Canonical download:
-  http://prdownloads.sourceforge.net/cssed/
+  http://downloads.sourceforge.net/cssed/
 
 -------------------------------------------
 
 Build instructions:
-  unpack cssed-0.4.0-1-src.tar.bz2
+  unpack cssed-0.4.0-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  ./cssed-0.4.0-1.sh all
+  cygport ./cssed-0.4.0-X.cygport all
 
 This will create:
-  /usr/src/cssed-0.4.0-1-src.tar.bz2
-  /usr/src/cssed-0.4.0-1.tar.bz2
+  /usr/src/cssed-0.4.0-X-src.tar.bz2
+  /usr/src/cssed-0.4.0-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the binary package:
 
   /usr/bin/cssed.exe
+  /usr/lib/libcssed.a
+  /usr/lib/pkgconfig/cssed.pc
   /usr/share/cssed/data/cssed-cfg.xml
   /usr/share/cssed/data/cssed-def.dtd
   /usr/share/cssed/data/cssed-def.xml
+  /usr/share/cssed/include/SciLexer.h
+  /usr/share/cssed/include/Scintilla.h
+  /usr/share/cssed/include/ScintillaWidget.h
+  /usr/share/cssed/include/cssdialogs-class.h
+  /usr/share/cssed/include/cssedwindow.h
+  /usr/share/cssed/include/document.h
+  /usr/share/cssed/include/plugin.h
   /usr/share/cssed/pixmaps/arrow.png
   /usr/share/cssed/pixmaps/color_wizard.png
   /usr/share/cssed/pixmaps/color_wizard_menu.png
@@ -60,9 +75,9 @@ Files included in the binary package:
   /usr/share/cssed/pixmaps/dlg_box_menu.png
   /usr/share/cssed/pixmaps/dlg_margin.png
   /usr/share/cssed/pixmaps/dlg_padding.png
+  /usr/share/cssed/pixmaps/doc_close.png
   /usr/share/cssed/pixmaps/document_info.png
   /usr/share/cssed/pixmaps/document_info_menu.png
-  /usr/share/cssed/pixmaps/doc_close.png
   /usr/share/cssed/pixmaps/font.png
   /usr/share/cssed/pixmaps/hide_footer.png
   /usr/share/cssed/pixmaps/hide_footer_menu.png
@@ -80,10 +95,9 @@ Files included in the binary package:
   /usr/share/cssed/pixmaps/validate_dump.png
   /usr/share/cssed/pixmaps/validate_dump_menu.png
   /usr/share/cssed/pixmaps/validate_menu.png
-  /usr/share/doc/Cygwin/cssed-0.4.0.README
   /usr/share/doc/cssed-0.4.0/AUTHORS
-  /usr/share/doc/cssed-0.4.0/ChangeLog
   /usr/share/doc/cssed-0.4.0/COPYING
+  /usr/share/doc/cssed-0.4.0/ChangeLog
   /usr/share/doc/cssed-0.4.0/INSTALL
   /usr/share/doc/cssed-0.4.0/NEWS
   /usr/share/doc/cssed-0.4.0/README
@@ -98,6 +112,9 @@ Files included in the binary package:
 ------------------
 
 Port Notes:
+
+----- version 0.4.0-2 -----
+Rebuilt with cygport; enabled plugins support.
 
 ----- version 0.4.0-1 -----
 Version bump.
